# django_finale

./: Dockerfile  db.sqlite3  docker-compose.yml  promtail-config.yml  pyproject.toml  requirements.txt  test_orders.csv
blogapp/: admin.py  middleware.py  models.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py
blogapp/templates/blogapp/: article_list.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
myapiapp/: middleware.py  urls.py  views.py
myapiapp/templates/myapiapp/: upload.html
myauth/: forms.py  models.py  urls.py  views.py
myauth/management/commands/: create_profiles.py
myauth/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_create_missing_profiles.py
myauth/templates/myauth/: about_me.html  base.html  cookie_get.html  cookie_set.html  login.html  profile.html  profile_edit.html  profile_update.html  session_get.html  session_set.html  signup.html  user_detail.html  user_list.html
myfirstproject/: asgi.py  settings.py  urls.py  wsgi.py
shopapp/: admin.py  forms.py  models.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py  viewsets.py
shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  users-fixtures.json
shopapp/management/commands/: create_orders.py  create_products.py  create_test_fixtures.py  setup_permissions.py
shopapp/migrations/: 0001_create_product_model.py  0002_alter_product_options_product_created_by.py  0003_alter_order_options_alter_product_options_and_more.py
shopapp/templates/admin/: csv_form.html
shopapp/templates/shopapp/: base.html  (+12 more)
(+1 files in other folders)
