[tool.poetry]
name = "django-finale"
version = "0.1.0"
description = "Django shop application"
author = "Your Name <your.email@example.com>"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.2.5"
djangorestframework = "3.14.0"
django-filter = "23.3"
drf-spectacular = "0.27.0"
django-debug-toolbar = "4.2.0"
pillow = "10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.virtualenvs]
create = false